// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Tag DefaultGreen smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_forest_i9is8_24 _tag_medium_i9is8_30">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag DefaultGrey smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_graphite_i9is8_27 _tag_medium_i9is8_30">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag DefaultRed smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_burgundy_i9is8_21 _tag_medium_i9is8_30">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag DefaultYellow smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_ochre_i9is8_18 _tag_medium_i9is8_30">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag Small smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_ochre_i9is8_18 _tag_small_i9is8_33">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="en"
       data-testid="123ID"
       class="_tag_i9is8_1 _tag_ochre_i9is8_18 _tag_medium_i9is8_30 dummyClassname"
  >
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag WithCanBeManuallyFocused play-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_ochre_i9is8_18 _tag_medium_i9is8_30"
       tabindex="-1"
  >
    <div class="_iconWrapper_i9is8_12"
         aria-hidden="true"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_i9is8_12"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
    </div>
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_burgundy_i9is8_21 _tag_medium_i9is8_30">
    <div class="_iconWrapper_i9is8_12"
         aria-hidden="true"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_i9is8_12"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
    </div>
    Særavgift
  </div>
</div>
`;

exports[`Tester/Tag WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_tag_i9is8_1 _tag_ochre_i9is8_18 _tag_medium_i9is8_30"
       id="dummyIdForwardedFromRef"
  >
    Særavgift
  </div>
</div>
`;
